Fixes an issue with dark modes, where observation "hi/Lo" color valuess in skin.conf are not honored.

--- a/src/scss/_neowx-material.scss
+++ b/src/scss/_neowx-material.scss
@@ -66,7 +66,7 @@ body {
         }
 
         .text-muted {
-            color: #aaa !important;
+            color: #aaa;
         }
 
         // Adjusted colors. Default text is color 500, in dark: 300
@@ -108,7 +108,7 @@ body {
     }
 
     .text-muted {
-        color: #aaa !important;
+        color: #aaa;
     }
 
     // Adjusted colors. Default text is color 500, in dark: 300
